# dicomancer

./: Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
assets/: icon.icns
src/: app.rs  image_pipeline.rs  main.rs  message.rs  model.rs
src/components/: mod.rs  segmented_toggle.rs
src/model/: dicom_entry.rs  element.rs  loader.rs  metadata.rs  mod.rs  tree.rs
src/utils/: formatting.rs  mod.rs
src/views/: image_viewer.rs  metadata_panel.rs  mod.rs  tree_browser.rs
